fix(popover): popovers now work in containers with overflow:auto
added container with position fixed, and container with position relative to keep positioning logic.

--- a/packages/components/components/elvis-popover/src/react/style.scss
+++ b/packages/components/components/elvis-popover/src/react/style.scss
@@ -39,6 +39,18 @@ $green: #29d305;
     width: 100%;
     height: 100%;
   }
+
+  &__fixed-content-area {
+    position: fixed;
+    z-index: 99;
+
+    .ewx-popover__contentContainer {
+      height: 100%;
+      width: 100%;
+      position: relative;
+    }
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
@@ -59,6 +71,7 @@ $green: #29d305;
     // Top aligned
     bottom: 100%;
     margin-bottom: 16px;
+    white-space: normal;
 
     .ewc-popover__close {
       position: absolute;
